<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <string name="main_menu">Menu</string>
    <string name="check_bar_code">Scan Code</string>
    <string name="upc_enter">UPC enter</string>
    <string name="not_fba">This item cannot SHIP.</string>
    <string name="input_upc">Input UPC</string>

    <!--Menu -->
    <string name="menu_title">PRODUCT READER MENU</string>
    <string name="menu_1">Products List update</string>
    <string name="menu_2">Restock List update</string>
    <string name="menu_3">Cache Full Products</string>
    <string name="menu_4">Clear Cached list</string>
    <string name="menu_5">Submit</string>

    <!--add new upc-->
    <string name="title_add_view">Add New UPC</string>
    <string name="upc">UPC</string>
    <string name="product_name">By Name</string>
    <string name="celect_name">Celect the auto displayed name</string>
    <string name="add">ADD</string>
    <string name="number_no_match">The total number not match the Set number! Please check again!</string>

    <!-- upc product page -->
    <string name="upc_title">Product Update</string>
    <string name="upc_menu1">Set number</string>
    <string name="upc_set">Set</string>
    <string name="upc_store1">Box A</string>
    <string name="upc_store2">Box B</string>
    <string name="upc_menu2">Restock A</string>
    <string name="upc_menu3">Restock B</string>
    <string name="upc_menu4">Submit</string>
    <string name="upc_error">The UPC is not right! Please enter again.</string>
    <string name="upc_product_name">Product</string>
    <string name="upc_product_number">Restock</string>
</resources>
